syntax = "proto3";

service Training {
    // Registers the started training at the server.
    //
    // A Response object with success 'true' is returned, if
    // the training was registered. Otherwise 'false'.
    rpc RegisterTraining (TrainingJob) returns (Response) {
    }

    // Updates the started traing at the server,
    //
    // A Respone object with responseString 'true' is returned, if the
    // training was updated. Otherwise 'false'.
    rpc UpdateTraining (TrainingJob) returns (Response) {
    }
}

// Represents a training with all information regarding the training.
//
// stopTime may be 0, if training hasn't finished yet.
message TrainingJob {
    string trainingId = 1;
    int64 startTime = 2;
    int64 stopTime = 3;

}

message Response {
    bool success = 1;
}
